tests/src/frontend/typechecking/invalid/invalid_keep_multiple_use_conditions_contravariant.sk
trait Foo<-T> {
  fun doit(T): Int;
}

trait HasBar {
  fun bar(): Int;
}

// also has EqualityIsh[T: OrderableIsh]
base class P1<-T> uses Foo<T>[T: HasBar]
base class P2<-T> uses Foo<T>[T: HasBar]
class C1<-U, -T: U>() extends P1<T>, P2<U> {
  fun doit[T: HasBar](t: T): Int {
    t.bar()
  }
}
